# OpenCL-Benchmark

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE.md  Makefile  OpenCL-Benchmark.sln  OpenCL-Benchmark.vcxproj  README.md  make.sh
src/: kernel.cpp  main.cpp  opencl.hpp
